--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Countdown Timer ⏳</h1>
-  <div id="timer">10:00</div>
+  <div class="container">
+    <h1 class="fade-in">Countdown Timer ⏳</h1>
+    <div id="timer" class="pulse">10:00</div>
+    <button id="restart">Restart ⟳</button>
+  </div>
 
   <script src="script.js"></script>
 </body>
