--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>10 Minute Timer</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>An Animated Message</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1 class="fade-in">Countdown Timer ⏳</h1>
-    <div id="timer" class="pulse">10:00</div>
-    <button id="restart">Restart ⟳</button>
-  </div>
 
-  <script src="script.js"></script>
+    <div class="text-container">
+        <span>y</span>
+        <span>o</span>
+        <span>u</span>
+        <span class="space"></span>
+        <span>a</span>
+        <span>r</span>
+        <span>e</span>
+        <span class="space"></span>
+        <span>a</span>
+        <span>n</span>
+        <span class="space"></span>
+        <span>i</span>
+        <span>d</span>
+        <span>i</span>
+        <span>o</span>
+        <span>t</span>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
